# VoxelsNextTry

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: Application.cpp  Application.h  main.cpp
src/Renderer/: Buffers.cpp  Buffers.h  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  Shader.cpp  Shader.h  World.cpp  World.h
src/Shaders/: computeClearTextures.glsl  computeExample.glsl  computeVoxelTraversal.glsl  shader.frag  shader.vert
src/World/: Chunk.cpp  Chunk.h  Decoration.h  World.cpp  World.h
